Fixed navbar spacing issue

--- a/css/original.scss
+++ b/css/original.scss
@@ -254,9 +254,8 @@ section {
   }
 }
 .navbar {
-  background-color: #012053;
   color: #fff;
-  min-height: 12vh;
+  min-height: 10vh;
 }
 .nav {
   li {
